--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css">
     <title>Registro</title>
 </head>
@@ -45,6 +46,34 @@
                 <div class="registro">
                     <button @click="guardar"
                         class="p-2  bg-primary-subtle border text-primary-emphasis">Guardar</button>
+                </div>
+
+                <div>
+
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Nombres</th>
+                                <th>Apellidos</th>
+                                <th>Nombre completo</th>
+                                <th>Edad</th>
+                                <th>Clave</th>
+                                <th>Usuario</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr v-for="registro of registros">
+                                <td>{{ registro.nombres }}</td>
+                                <td>{{ registro.apellidos }}</td>
+                                <td>{{ registro.nombreCompleto }}</td>
+                                <td>{{ registro.edad }}</td>
+                                <td>{{ registro.claveAleatoria }}</td>
+                                <td>{{ registro.usuarioV }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
 
 
