--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 </div>
 
                 <div class="registro">
-                    <label for="">Usuario</label>
+                    <label>Usuario</label>
                     <input type="text" v-model="usuario">
                 </div>
 
                 <div class="registro">
-                    <label for="">Fecha de nacimiento</label>
+                    <label>Fecha de nacimiento</label>
                     <input type="date" v-model="fechaNacimiento">
                 </div>
 
@@ -69,7 +69,7 @@
                                 <td>{{ registro.nombreCompleto }}</td>
                                 <td>{{ registro.edad }}</td>
                                 <td>{{ registro.claveAleatoria }}</td>
-                                <td>{{ registro.usuarioV }}</td>
+                                <td>{{ registro.usuario }}</td>
                             </tr>
                         </tbody>
                     </table>
