--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <div class="registro">
                     <button @click="guardar"
-                        class="p-2  bg-primary-subtle border text-primary-emphasis">Guardar</button>
+                        class="p-2  bg-primary-subtle border text-primary-emphasis rounded">Guardar</button>
                 </div>
 
                 <div>
